--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-<form action="/post" method="post" enctype="multipart/form-data">
+<form action="/post" method="post">
 
         <h2>Create Post</h2>
 <br>    
